add NSI project description markdown

--- a/notebooks/analysis_nsi.ipynb
+++ b/notebooks/analysis_nsi.ipynb
@@ -200,6 +200,22 @@
     "print(\"saved: reports/figures/nsi_top10_sectors_no_total.png\")\n",
     "print(top10)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ee2b95b",
+   "metadata": {},
+   "source": [
+    "Project Bulgarian Labour Market Analysis\n",
+    "Source National Statistical Institute Bulgaria\n",
+    "Goal Employment trends by sector education region"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a85c348",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
